--- a/index.css
+++ b/index.css
@@ -1,3 +1,43 @@
-#heading{
-    color: red;
+.header{
+    justify-content: space-between;
+    display: flex;
+    border: 1px solid black
+}
+.logo{
+    width: 100px;
+}
+
+.nav-items > ul{
+    display: flex;
+}
+
+.nav-items > ul > li{
+    font-size: 24px;
+    padding: 10px;
+    margin: 10px;
+    list-style-type: none;
+}
+.search{
+    margin: 10px;
+    padding: 10px;
+    border: 1px solid;
+}
+.res-container{
+    display: flex;
+    flex-wrap: wrap;
+}
+.res-card{
+    width: 200px;
+    height: 300px;
+    padding: 10px;
+    margin: 10px;
+    cursor: pointer;
+}
+.res-card:hover{
+    border: 1px solid black;
+}
+.res-logo-container > .res-logo{
+    padding: 5px;
+    width: 190px;
+    height: 100px;
 }
