--- a/index.css
+++ b/index.css
@@ -43,3 +43,20 @@
     width: 190px;
     height: 100px;
 }
+.shimmer-container{
+    display: flex;
+    flex-wrap: wrap;
+}
+.shimmer-card{
+    margin: 20px;
+    width: 200px;
+    height: 300px;
+    background-color: #f0f0f0;
+}
+.btn-login{
+    margin: 20px;
+    cursor: pointer;
+}
+.filter{
+    display: flex;
+}
